@@ -38,3 +38,9 @@
   * Version 0.1.8
   * Unicode fix 
   * Version 0.1.9
+
+7-August-2012 - Sam
+
+  * Added option to disable profiler for the current session (pp=disable / pp=enable)
+  * yajl compatability contributed by Sven Riedel 
+
